# agentic-pr-descriptions

./: .gitignore  README.md  pyproject.toml
src/agentic_pr_descriptions/: crew.py  logger.py  main.py
src/agentic_pr_descriptions/config/: agents.yaml  tasks.yaml
src/agentic_pr_descriptions/utils/: git.py
tests/utils/: test_git.py
