[project]
name = "agentic-pr-descriptions"
version = "0.1.0"
description = "PR description generation using CrewAI"
authors = [{ name = "Carmelo Polito", email = "polito.carmelo.88@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "gitpython>=3.1.45",
]

[project.scripts]
pr-desc-gen = "agentic_pr_descriptions.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
